# kinfu_remake

./: CMakeLists.txt
apps/: CMakeLists.txt  demo.cpp  demo_bin.cpp  demo_ubitrack.cpp
cmake/Modules/: FindUbitrack.cmake
kfusion/: CMakeLists.txt
kfusion/include/kfusion/: kinfu.hpp
kfusion/include/kfusion/cuda/: marching_cubes.hpp
kfusion/include/kfusion_io/: bin_grabber.hpp
kfusion/src/: bin_grabber.cpp  capture.cpp  internal.hpp  kinfu.cpp  marching_cubes.cpp  precomp.hpp
kfusion/src/cuda/: color_volume.cu  marching_cubes.cu
